--- a/Flocally/Base.lproj/Main.storyboard
+++ b/Flocally/Base.lproj/Main.storyboard
@@ -640,7 +640,7 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" tag="-1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oby-hN-VjU" userLabel="PlusButton">
+                                        <button opaque="NO" tag="-1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oby-hN-VjU" userLabel="MinusButton">
                                             <rect key="frame" x="498" y="190" width="27" height="27"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="27" id="SvV-rv-BUK"/>
@@ -651,7 +651,7 @@
                                                 <action selector="changeQuantity:" destination="xwP-oQ-F1I" eventType="touchUpInside" id="ZV1-LS-j8d"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7d-Ib-DnF" userLabel="MinusButton">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7d-Ib-DnF" userLabel="PlusButton">
                                             <rect key="frame" x="565" y="190" width="27" height="27"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="27" id="c6D-8w-qbU"/>
@@ -2237,7 +2237,7 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" tag="-1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBj-hL-npH" userLabel="PlusButton">
+                                        <button opaque="NO" tag="-1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBj-hL-npH" userLabel="MinusButton">
                                             <rect key="frame" x="498" y="190" width="27" height="27"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="27" id="u68-iS-y24"/>
@@ -2248,7 +2248,7 @@
                                                 <action selector="changeQuantity:" destination="2Ug-WX-yf7" eventType="touchUpInside" id="XuD-AU-tjr"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g5X-Vd-cBV" userLabel="MinusButton">
+                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g5X-Vd-cBV" userLabel="PlusButton">
                                             <rect key="frame" x="565" y="190" width="27" height="27"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="27" id="23V-It-JS5"/>
@@ -2456,7 +2456,7 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" tag="-1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EPq-dt-izQ" userLabel="PlusButton">
+                                        <button opaque="NO" tag="-1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EPq-dt-izQ" userLabel="MinusButton">
                                             <rect key="frame" x="498" y="190" width="27" height="27"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="27" id="C7b-5m-Cq4"/>
@@ -2467,7 +2467,7 @@
                                                 <action selector="changeQuantity:" destination="421-Nk-j46" eventType="touchUpInside" id="kPx-m6-00r"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F1b-cg-bE5" userLabel="MinusButton">
+                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F1b-cg-bE5" userLabel="PlusButton">
                                             <rect key="frame" x="565" y="190" width="27" height="27"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="27" id="0iN-gH-eVZ"/>
@@ -2673,7 +2673,7 @@
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJd-cN-qFi" userLabel="MinusButton">
+                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJd-cN-qFi" userLabel="PlusButton">
                                             <rect key="frame" x="565" y="190" width="27" height="27"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="27" id="JwM-BO-hRJ"/>
@@ -2693,7 +2693,7 @@
                                             <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" tag="-1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAq-O2-y3Q" userLabel="PlusButton">
+                                        <button opaque="NO" tag="-1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAq-O2-y3Q" userLabel="MinusButton">
                                             <rect key="frame" x="498" y="190" width="27" height="27"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="27" id="aaA-wk-8so"/>
@@ -3189,8 +3189,8 @@
         <image name="veg" width="27" height="27"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="iTG-Nf-xD0"/>
+        <segue reference="43P-dP-7Vu"/>
+        <segue reference="heD-Ue-ito"/>
         <segue reference="41J-x7-kmF"/>
-        <segue reference="mCp-yN-gSC"/>
     </inferredMetricsTieBreakers>
 </document>
